Cultibox (1.1.30) precise; urgency=low 
    + Correction des accents sur les notes en français uniquement pour les updates

-- Yann Genevois <yann.genevois@gmail.com>  Thu Aug  8 23:00:52 CEST 2013


Cultibox (1.1.29) precise; urgency=low
    + Correction des accents sur Mac et concernant la partie Notes
    + Ajout de la librairie scrollTo JQUERY pour gérer le déplacement des fenêtres après une action
    + Ajout d'un message d'erreur si aucun capteur n'est selectionné pour la régulation
    + Ajout de la possibilité de configurer le type de puissance max d'une prise dans l'assistant
    + Ajout d'un bouton dans la partie prise qui permet de configurer la prise actuelle à l'aide de l'assistant
    + Ajout d'un tooltip d'explication sur l'option d'envoie d'informations
    + Ajout des evènements dans le calendrier depuis les fichiers d'engrais XML

-- Yann Genevois <yann.genevois@gmail.com>  Fri Aug  2 10:30:41 CEST 2013


Cultibox (1.1.28) precise; urgency=low
    + Ajout de la section "Le saviez-vous?" dans la page de welcome
    + Différenciation des messages de chargement des logs en mode auto ou lors de la soumission du formulaire
    + Remise en fonction de la notification de logs plus anciens présent à être chargé
    + Une fenêtre permet de selectionner une date de début et de fin pour la suppréssion des logs de la base ou encore de supprimer tous les logs existant
    + Réorganisation des fichiers de la carte SD
    + Ajout du fichier index dans le repertoire logs
    + Mise en place de la fonctionnalité de remise à zéro du min/max des capteurs
    + Compatibilité descendante des cartes SD
    + Ajout de la tolérance sur la régulation secondaire dans le fichier plugXX
    + Ajout du chargement des logs pour le capteur de température d'eau
    + Les catégories du menu s'affichent maintenant directement après modification de la configuration
    + Les erreurs dans le menu de configuraion et d'affichage des logs sont gérées en AJAX sans rechargement de page