@@ -26,16 +26,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 0,8 - 1
-         Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (1ml/l)
-         Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 0,8 - 1
+* Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (1ml/l)
+* Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)</content>
       <duration>7</duration>
       <start>0</start>
 
       <nutriment>
-        <name>Composant-1 / Bio Flower 1</name>
+        <name>Composant-1 - Bio Flower 1</name>
         <dosage>1ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -53,16 +51,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1 - 1,2
-         Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (1,5ml/l - 2ml/l)
-         Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1 - 1,2
+* Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (1,5ml/l - 2ml/l)
+* Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)</content>
       <duration>7</duration>
       <start>7</start>
 
       <nutriment>
-        <name>Composant-1 / Bio Flower 1</name>
+        <name>Composant-1 - Bio Flower 1</name>
         <dosage>2ml/l - 3ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -88,16 +84,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,2 - 1,5
-         Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (2ml/l - 3ml/l)
-         Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1,2 - 1,5
+* Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (2ml/l - 3ml/l)
+* Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)</content>
       <duration>7</duration>
       <start>14</start>
 
       <nutriment>
-        <name>Composant-1 / Bio Flower 1</name>
+        <name>Composant-1 - Bio Flower 1</name>
         <dosage>3ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -123,16 +117,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,2 - 1,5
-         Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (2ml/l - 3ml/l)
-         Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1,2 - 1,5
+* Vous pouvez remplacer Composant-1 / Bio Flower 1 par Terre A et B (2ml/l - 3ml/l)
+* Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)</content>
       <duration>7</duration>
       <start>21</start>
 
       <nutriment>
-        <name>Composant-1 / Bio Flower 1</name>
+        <name>Composant-1 - Bio Flower 1</name>
         <dosage>3ml/l</dosage>
       </nutriment>
       <nutriment>
