@@ -26,11 +26,9 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,4
-         Vous pouvez remplacer Composant-Bio par Terre A et B (2ml/l - 3ml/l)
-         Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1,4
+* Vous pouvez remplacer Composant-Bio par Terre A et B (2ml/l - 3ml/l)
+* Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)</content>
       <duration>7</duration>
       <start>0</start>
 
@@ -60,16 +58,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,4 - 1,6
-         Vous pouvez remplacer Composant-Bio par Terre A et B (3ml/l - 3,5ml/l)
-         Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1,4 - 1,6
+* Vous pouvez remplacer Composant-Bio par Terre A et B (3ml/l - 3,5ml/l)
+* Vous pouvez remplacer Roots Excelurator par Stimulator 1 roots (1ml/l)</content>
       <duration>14</duration>
       <start>7</start>
 
       <nutriment>
-        <name>Composant/ Bio</name>
+        <name>Composant Bio</name>
         <dosage>4ml/l - 5ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -94,15 +90,13 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,6 - 1,8
-         Vous pouvez remplacer Composant-Bio par Terre A et B (3ml/l - 3,5ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1,6 - 1,8
+* Vous pouvez remplacer Composant-Bio par Terre A et B (3ml/l - 3,5ml/l)</content>
       <duration>7</duration>
       <start>21</start>
 
       <nutriment>
-        <name>Composant/ Bio</name>
+        <name>Composant Bio</name>
         <dosage>4ml/l - 5ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -114,7 +108,7 @@
         <dosage>1ml/l</dosage>
       </nutriment>
       <nutriment>
-        <name>Top Booster / PK13-14</name>
+        <name>Top Booster PK13-14</name>
         <dosage>0,5ml/l</dosage>
       </nutriment>
       <color>orange</color>
@@ -127,15 +121,13 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,6 - 1,8
-         Vous pouvez remplacer Composant-Bio par Terre A et B (3ml/l - 3,5ml/l)
-      </content>
+      <content type = "text">* Ec conseillé : 1,6 - 1,8
+* Vous pouvez remplacer Composant-Bio par Terre A et B (3ml/l - 3,5ml/l)</content>
       <duration>7</duration>
       <start>28</start>
 
       <nutriment>
-        <name>Composant/ Bio</name>
+        <name>Composant Bio</name>
         <dosage>4ml/l - 5ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -147,7 +139,7 @@
         <dosage>1ml/l</dosage>
       </nutriment>
       <nutriment>
-        <name>Top Booster / PK13-14</name>
+        <name>Top Booster  PK13-14</name>
         <dosage>1ml/l</dosage>
       </nutriment>
       <color>orange</color>
@@ -160,16 +152,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,8 - 2
-         Vous pouvez remplacer Composant-Bio par Terre A et B (1ml/l - 1,5ml/l)
-         Vous pouvez ajouter 0,5ml/l de Top shooter. Dans ce cas, ne pas mettre de Top Booster / PK13-14.
-      </content>
+      <content type = "text">* Ec conseillé : 1,8 - 2
+* Vous pouvez remplacer Composant-Bio par Terre A et B (1ml/l - 1,5ml/l)
+* Vous pouvez ajouter 0,5ml/l de Top shooter. Dans ce cas, ne pas mettre de Top Booster / PK13-14</content>
       <duration>7</duration>
       <start>35</start>
 
       <nutriment>
-        <name>Composant/ Bio</name>
+        <name>Composant Bio</name>
         <dosage>2ml/l - 3ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -181,7 +171,7 @@
         <dosage>1ml/l</dosage>
       </nutriment>
       <nutriment>
-        <name>Top Booster / PK13-14</name>
+        <name>Top Booster  PK13-14</name>
         <dosage>1,5ml/l</dosage>
       </nutriment>
       <color>orange</color>
@@ -194,16 +184,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,8 - 2
-         Vous pouvez remplacer Composant-Bio par Terre A et B (1ml/l - 1,5ml/l)
-         Vous pouvez ajouter 1ml/l de Top shooter. Dans ce cas, ne pas mettre de Top Booster / PK13-14.
-      </content>
+      <content type = "text">* Ec conseillé : 1,8 - 2
+* Vous pouvez remplacer Composant-Bio par Terre A et B (1ml/l - 1,5ml/l)
+* Vous pouvez ajouter 1ml/l de Top shooter. Dans ce cas, ne pas mettre de Top Booster / PK13-14</content>
       <duration>13</duration>
       <start>42</start>
 
       <nutriment>
-        <name>Composant/ Bio</name>
+        <name>Composant Bio</name>
         <dosage>2ml/l - 3ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -215,7 +203,7 @@
         <dosage>1ml/l</dosage>
       </nutriment>
       <nutriment>
-        <name>Top Booster / PK13-14</name>
+        <name>Top Booster  PK13-14</name>
         <dosage>1,5ml/l</dosage>
       </nutriment>
       <color>orange</color>
@@ -228,9 +216,7 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Rinçage à l'eau claire.
-      </content>
+      <content type = "text">* Rinçage à l'eau claire</content>
       <duration>1</duration>
       <start>55</start>
       <color>orange</color>
@@ -243,16 +229,14 @@
       <updated>2008-05-29T13:14:57+02:00</updated>
       <id>http://www.cultibox.fr/id1</id>
       <category term = "vegetation" label = "Vegetation" />
-      <content type = "text">
-         Ec conseillé : 1,8 - 2
-         Vous pouvez remplacer Composant-Bio par Terre A et B (1ml/l - 1,5ml/l)
-         Vous pouvez ajouter 1ml/l de Top shooter. Dans ce cas, ne pas mettre de Top Booster / PK13-14.
-      </content>
+      <content type = "text">* Ec conseillé : 1,8 - 2
+* Vous pouvez remplacer Composant-Bio par Terre A et B (1ml/l - 1,5ml/l)
+* Vous pouvez ajouter 1ml/l de Top shooter. Dans ce cas, ne pas mettre de Top Booster / PK13-14</content>
       <duration>14</duration>
       <start>56</start>
 
       <nutriment>
-        <name>Composant/ Bio</name>
+        <name>Composant Bio</name>
         <dosage>2ml/l - 3ml/l</dosage>
       </nutriment>
       <nutriment>
@@ -264,7 +248,7 @@
         <dosage>1ml/l</dosage>
       </nutriment>
       <nutriment>
-        <name>Top Booster / PK13-14</name>
+        <name>Top Booster  PK13-14</name>
         <dosage>1,5ml/l</dosage>
       </nutriment>
       <color>orange</color>
